--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <h1>Hey Ladies!</h1>
     <div>
-        <img src="'photo.JPG" height="200">
+        <img src="photo.JPG" height="200">
     </div>
 </html>
